# dch

./: .clippy.toml  Cargo.toml  Makefile  rustfmt.toml
.github/workflows/: ci.yml
crates/dch/: Cargo.toml
crates/dch-config/: Cargo.toml
crates/dch-config/src/: lib.rs
crates/dch-loop/: Cargo.toml
crates/dch-loop/src/: error.rs  lib.rs  provider.rs
crates/dch-tools/: Cargo.toml
crates/dch-tools/src/: bash.rs  context.rs  diff.rs  edit.rs  file_viewer.rs  fs.rs  glob.rs  lib.rs  linter.rs  multi_edit.rs  question.rs  read.rs  registry.rs  runtime.rs  state.rs  util.rs  walk.rs  write.rs
crates/dch-tui/: Cargo.toml
crates/dch-tui/src/: lib.rs
crates/dch/src/: main.rs
xtask/: Cargo.toml
xtask/src/: boundary.rs  main.rs
