[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Workspace automation tasks for dch (boundary checks, etc.)"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
