[package]
name = "dch-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TOML configuration loading for dch"

[dependencies]
loopctl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
