[package]
name = "dch-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TOML configuration loading for dch"

[dependencies]
dirs = { workspace = true }
loopctl = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
