[package]
name = "dch-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Ratatui terminal UI for dch: themes, markdown rendering, streaming, TuiObserver"

[dependencies]
loopctl    = { workspace = true }
dch-config = { workspace = true }
ratatui        = { workspace = true }
crossterm      = { workspace = true }
event-listener = { workspace = true }
chrono         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }

[lints]
workspace = true
